tests/cases/smoke/invalid/func_duplicate_param.dp
func add(a: int, a: int) -> int = a + a
